--- a/index.html
+++ b/index.html
@@ -524,6 +524,24 @@ Historically, the open source software community rightfully was extremely wary o
 	</tr>
 
 	<tr>
+		<td class="col_year">   2008</td>
+		<td class="col_work">   <a href="https://dl.acm.org/doi/abs/10.1145/1346256.1346267">SP<sup>3</sup></a></td>
+		<td class="col_venue">  VEE</td>
+		<td class="col_domain"> <span class="badge text-bg-success">Virt</span></td>
+		<td class="col_target"> <span class="badge text-bg-dark">Process</span></td>
+		<td class="col_ideas">  Similar to Overshadow, a hypervisor uses a shadowed page table with encrypted and unencrypted copies of data selected dynamically depending on the executing security domain (user enclave or OS). Defines algorithm for lazy encryption and decryption to optimize performance. Hypervisor encrypts enclave register state on exception or interrupt and provides the OS an interface for switching into enclaves in order to decrypt that state.</td>
+		<td class="col_C">      <i class="bi bi-check-lg"></i></td>
+		<td class="col_I">      <i class="bi bi-x-lg"></i></td>
+		<td class="col_A">      <i class="bi bi-x-lg"></i></td>
+		<td class="col_RA">     <i class="bi bi-x-lg"></i></td>
+		<td class="col_P">      <i class="bi bi-x-lg"></i></td>
+		<td class="col_MA">     <i class="bi bi-x-lg"></i></td>
+		<td class="col_IO">     <i class="bi bi-x-lg"></i></td>
+		<td class="col_legacy"> <i class="bi bi-check-lg"></i></td>
+	</tr>
+
+
+	<tr>
 		<td class="col_year">   2009</td>
 		<td class="col_work">   <a href="https://dl.acm.org/doi/10.1145/1456455.1456460">Mobile Trusted Modules</a></td>
 		<td class="col_venue">  CCSW/STC</td>
